--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,4 @@
+
 .clear {
 	clear:both;
 }
@@ -36,6 +37,8 @@
 	color: black;
 	font-size: 25px;
 	border-bottom: 1px solid #dfdfdf;
+	font-family: 'source_sans_proXLtIt', sans-serif;
+	font-weight: bold;
 }
 
 header {
@@ -45,3 +48,14 @@ header {
 hr {
 	clear:both;
 }
+
+h1 {
+	font-family: 'source_sans_proXLtIt', sans-serif;
+	font-weight: bold;
+	font-size: 48px;
+}
+
+h2 {
+	font-family: 'Open Sans Condensed', sans-serif;
+}
+
